[gd_scene load_steps=17 format=3 uid="uid://b0mgw4ltl7wwb"]

[ext_resource type="Material" uid="uid://bfxk53bol7o4w" path="res://modules/ShadeMaterials/Just_shiny_white.tres" id="1_2cfb6"]
[ext_resource type="Script" path="res://modules/Meshening/mesh_bean.gd" id="1_y2nq3"]
[ext_resource type="Material" uid="uid://bxtpu8enmesqc" path="res://modules/ShadeMaterials/Just_shiny_cyan.tres" id="2_ss0r4"]
[ext_resource type="Material" uid="uid://bow5wm5wx8y18" path="res://modules/ShadeMaterials/mesh_bean_Explodos_ParticleProcessMaterial.tres" id="5_kxplt"]
[ext_resource type="SphereMesh" uid="uid://b7e7yu46ja2py" path="res://modules/Meshening/mesh_bean_smallBall_particle.tres" id="6_mjq0o"]
[ext_resource type="RibbonTrailMesh" uid="uid://b3mor7jdobxwr" path="res://modules/Meshening/mesh_bean_RibbonDuar_RibbonTrailParticle.tres" id="7_ikj6y"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ex6hx"]

[sub_resource type="BoxMesh" id="BoxMesh_mae6d"]
size = Vector3(0.5, 0.25, 0.5)

[sub_resource type="Animation" id="Animation_8wcn1"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlaceBean:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlaceBean:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlaceBean:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlaceBean:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlaceBean:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ulihh"]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlaceBean:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5708, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlaceBean:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0)]
}

[sub_resource type="Animation" id="Animation_6bf34"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlaceBean:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.785398), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nugwx"]
resource_name = "hurt_alt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlaceBean:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.785398, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wfuaq"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_bg3br"]
resource_name = "jump_subsequent"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlaceBean:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 3, 6.28319, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlaceBean:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlaceBean:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_nwu0i"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlaceBean:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ayp3"]
_data = {
"RESET": SubResource("Animation_8wcn1"),
"death": SubResource("Animation_ulihh"),
"hurt": SubResource("Animation_6bf34"),
"hurt_alt": SubResource("Animation_nugwx"),
"idle": SubResource("Animation_wfuaq"),
"jump_subsequent": SubResource("Animation_bg3br"),
"spawn": SubResource("Animation_nwu0i")
}

[node name="MeshBean" type="Node3D"]
script = ExtResource("1_y2nq3")

[node name="PlaceBean" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_2cfb6")
mesh = SubResource("CapsuleMesh_ex6hx")
skeleton = NodePath("../../..")

[node name="Visor" type="MeshInstance3D" parent="PlaceBean"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.5)
material_override = ExtResource("2_ss0r4")
mesh = SubResource("BoxMesh_mae6d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ayp3")
}

[node name="Explodos" type="GPUParticles3D" parent="."]
emitting = false
amount = 250
lifetime = 60.0
one_shot = true
explosiveness = 1.0
fixed_fps = 60
trail_enabled = true
trail_lifetime = 1.0
process_material = ExtResource("5_kxplt")
draw_passes = 2
draw_pass_1 = ExtResource("6_mjq0o")
draw_pass_2 = ExtResource("7_ikj6y")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
